--- a/Libertas2016Ecommerce/nbproject/project.properties
+++ b/Libertas2016Ecommerce/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.derbyclient.jar=C:\\Program Files\\glassfish-3.1.2.2\\javadb\\lib\\derbyclient.jar
+file.reference.mysql-connector-java-5.1.34.jar=C:\\Users\\Plinio Naves\\Dropbox\\Libertas\\2015\\Semestre 2\\Ely Fernando do Prado\\mysql-connector-java-5.1.34.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,8 +41,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate-support.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.34.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +69,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
