--- a/Libertas2016Ecommerce/web/WEB-INF/web.xml
+++ b/Libertas2016Ecommerce/web/WEB-INF/web.xml
@@ -8,4 +8,32 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    <servlet><!-- mapeando o servlet -->
+        <servlet-name>Jersey RESTful</servlet-name>
+        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+
+            <!-- O SERVLET-CLASS E O PARAM-NAME NÃO SÃO MODIFICADOS, BASTA COPIAR E COLAR.. POIS ESTÁ UTILIZANDO O SERVLET QUE VEM NA BIBLIOTECA DO JERSEY -->
+
+            <param-value>ecommerce.webservice.resources</param-value>
+            <!-- JÁ O PARAM-VALUE É O ENDEREÇO DO PACOTE ONDE SE ENCONTRA O SEU RECURSO -->
+
+        </init-param> 
+        <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+            <param-value>ecommerce.webservice.filters.CORSFilter</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Jersey RESTful</servlet-name>
+        <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
+    
 </web-app>
